# OrbitalBoy-Game-Boy-Emulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  build.cmd  cmake_install.cmake  compile_flags.txt  gbemu_tests  runlab.sh
docs/: guia.md  rom-suite.md  runlab-mcp-cpp.md
include/gb/: apu.hpp  bus.hpp  cartridge.hpp  cpu.hpp  gameboy.hpp  joypad.hpp  ppu.hpp  timer.hpp  types.hpp
include/gb/app/: app_options.hpp  cover_fetcher.hpp  headless_runner.hpp  rom_suite_runner.hpp  runtime_paths.hpp  sdl_compat.hpp  sdl_frontend.hpp
include/gb/app/frontend/: debug_ui.hpp  gba_realtime.hpp  realtime.hpp  realtime_support.hpp  rom_selector.hpp  runlab.hpp
include/gb/app/frontend/realtime/: audio_ring_buffer.hpp  cheat_engine.hpp  control_bindings.hpp  dropping_queue.hpp  frame_timeline.hpp  link_transport.hpp  replay_io.hpp  runlab_control_queue.hpp  save_slots.hpp  session_models.hpp  top_menu.hpp
include/gb/core/: apu.hpp  bus.hpp  cartridge.hpp  cpu.hpp  environment.hpp  gameboy.hpp  joypad.hpp  ppu.hpp  timer.hpp
include/gb/core/gba/: apu.hpp  cpu.hpp  debug.hpp  libretro_core.hpp  memory.hpp  mgba_core.hpp  ppu.hpp  system.hpp
profiles/: super_marioland.runlab.json
scripts/: build-msvc.ps1
src/: apu.cpp  bus.cpp  cartridge.cpp  cpu.cpp  gameboy.cpp  joypad.cpp  main.cpp  ppu.cpp  timer.cpp
src/app/: app_options.cpp  cover_fetcher.cpp  headless_runner.cpp  main.cpp  rom_suite_runner.cpp  runtime_paths.cpp  sdl_frontend.cpp
src/app/frontend/: debug_ui.cpp  gba_realtime.cpp  realtime.cpp  realtime_support.cpp  rom_selector.cpp  runlab.cpp
src/app/frontend/realtime/: audio_ring_buffer.cpp  cheat_engine.cpp  control_bindings.cpp  frame_timeline.cpp  link_transport.cpp  replay_io.cpp  runlab_control_queue.cpp  save_slots.cpp  top_menu.cpp
src/core/: apu.cpp  bus.cpp  cartridge.cpp  cpu.cpp  cpu_alu.cpp  gameboy.cpp  gameboy_state_io.cpp  joypad.cpp  ppu.cpp  timer.cpp
src/core/cartridge/mappers/: common.hpp  factory.hpp  huc1.cpp  huc3.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  mbc7.cpp  no_mbc.cpp  pocket_camera.cpp
src/core/gba/: apu.cpp  cpu.cpp  libretro_core.cpp  memory.cpp  mgba_core.cpp  ppu.cpp  system.cpp
tests/: bus_tests.cpp  cartridge_tests.cpp  cpu_behavior_tests.cpp  cpu_smoke_tests.cpp  frontend_feature_tests.cpp  gba_phase2_tests.cpp  peripheral_tests.cpp  state_and_options_tests.cpp  test_framework.hpp  test_main.cpp  test_utils.hpp
tools/orbitalboy-mcp-cpp/: CMakeLists.txt  README.md
tools/orbitalboy-mcp-cpp/examples/: claude_desktop_config.json  cursor_mcp_config.json
tools/orbitalboy-mcp-cpp/src/: json_rpc.cpp  json_rpc.h  main.cpp  mcp_prompts.cpp  mcp_prompts.h  mcp_resources.cpp  mcp_resources.h  mcp_server.cpp  mcp_server.h  mcp_tools.cpp  mcp_tools.h  runlab_client.cpp  runlab_client.h  runlab_state.cpp  runlab_state.h  safe_paths.cpp  safe_paths.h
tools/orbitalboy-mcp-cpp/tests/: test_runlab_state.cpp  test_safe_paths.cpp  test_tools.cpp
